--- a/server/.github/workflows/maven.yml
+++ b/server/.github/workflows/maven.yml
@@ -21,3 +21,9 @@ jobs:
           java-version: 1.8
       - name: Build with Maven
         run: mvn -B package
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v1
+        if: success()
+        with:
+          name: Nukkit
+          path: target/nukkit-1.0-SNAPSHOT.jar
