--- a/server/.github/workflows/maven.yml
+++ b/server/.github/workflows/maven.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+        with:
+          submodules: true
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
