--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
             post {
                 success {
                     junit 'target/surefire-reports/**/*.xml'
-                    archiveArtifacts artifacts: 'target/nukkit-*-SNAPSHOT.jar', fingerprint: true
+                    archiveArtifacts artifacts: 'target/Nukkit.jar', fingerprint: true
                 }
             }
         }
