be able to use `BiomeMap` to actually select biomes

--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -3,6 +3,10 @@
 # Author: DaPorkchop_
 
 generation:
+  biomes:
+    id: "nukkitx:constant"
+    dictionary: "nukkitx:overworld"
+    biome: "minecraft:jungle"
   density:
     id: "nukkitx:vanilla"
     selectorNoise:
