add populator registry as well
this should nearly mark the end of the api stuff

--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -24,3 +24,7 @@ generation:
       block: "water"
       seaLevel: 8
 population:
+  populators:
+    - id: "nukkitx:bedrock"
+      base: 1
+      fade: 5
