--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -30,7 +30,7 @@ generation:
 population:
   populators:
     - id: "nukkitx:basic_tree"
-      start: "grass,minecraft:diamond_block"
+      start: "grass"
       trunk: "log"
       leaf: "leaves"
       minTries: 2
