--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -12,10 +12,10 @@ generation:
     selectorNoise:
       id: "nukkitx:simplex"
       scaleX: 0.01
-      scaleY: 0.01
+      scaleY: 0.0025
       scaleZ: 0.01
-      octaves: 4
-      factor: 1.0
+      octaves: 8
+      factor: 4.0
       offset: 0.0
   replacers:
     - id: "nukkitx:ground"
@@ -27,6 +27,9 @@ generation:
     - id: "nukkitx:bedrock"
       base: 1
       fade: 5
+    - id: "nukkitx:surface"
+      target: "stone"
+      blocks: "grass,4*dirt"
 population:
   populators:
     - id: "nukkitx:basic_tree"
@@ -34,6 +37,6 @@ population:
       trunk: "log"
       leaf: "leaves"
       minTries: 2
-      maxTries: 6
+      maxTries: 8
       minHeight: 4
       maxHeight: 8
