allow overriding the local seed generation to ensure consistency

--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -4,12 +4,14 @@
 
 biomes:
   id: "nukkitx:constant"
+  seed: "biome"
   biome:
     id: "minecraft:jungle"
     dict: "nukkitx:vanilla"
 
 density:
   id: "nukkitx:vanilla"
+  seed: "noise"
   selectorNoise:
     id: "nukkitx:simplex"
     scale:
