--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -65,3 +65,9 @@ decorators:
 
 populators:
   - id: "nukkitx:biome"
+#  - id: "nukkitx:basic_tree"
+#    tries: 2-8
+#    on: "grass"
+#    height: 4-8
+#    trunk: "log"
+#    leaf: "leaves"
