--- a/server/src/main/resources/generator/test/nukkitx/test.yml
+++ b/server/src/main/resources/generator/test/nukkitx/test.yml
@@ -1,17 +1,48 @@
-id: "nukkitx:zoom"
+id: "nukkitx:add_island"
+fallback: "plains"
+special: "forest"
+ocean: "ocean"
 next:
-  id: "nukkitx:zoom"
+  id: "nukkitx:add_snow"
+  biomes:
+    - "forest"
+    - "extreme_hills"
+    - "plains"
+    - "plains"
+    - "plains"
+    - "plains"
+  ocean: "ocean"
   next:
-    id: "nukkitx:zoom"
+    id: "nukkitx:remove_ocean"
+    replacement: "plains"
+    ocean: "ocean"
     next:
-      id: "nukkitx:zoom"
+      id: "nukkitx:add_island"
+      fallback: "plains"
+      special: "forest"
+      ocean: "ocean"
       next:
-        id: "nukkitx:zoom"
-        fuzzy: true
+        id: "nukkitx:add_island"
+        fallback: "plains"
+        special: "forest"
+        ocean: "ocean"
         next:
-          id: "nukkitx:zoom"
-          fuzzy: true
+          id: "nukkitx:add_island"
+          fallback: "plains"
+          special: "forest"
+          ocean: "ocean"
           next:
-            id: "nukkitx:island"
-            chance: 10
-            biome: "plains"
+            id: "nukkitx:zoom"
+            next:
+              id: "nukkitx:add_island"
+              fallback: "plains"
+              special: "forest"
+              ocean: "ocean"
+              next:
+                id: "nukkitx:zoom"
+                fuzzy: true
+                next:
+                  id: "nukkitx:island"
+                  chance: 10
+                  biome: "plains"
+                  ocean: "ocean"
